--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ runs:
       uses: actions/download-artifact@v3
       with:
         name: ${{ inputs.name }}
-        path: /tmp/${{ inputs.name }}.tar
+        path: /tmp
     - name: Load image
       run: docker load --input /tmp/${{ inputs.name }}.tar
       shell: bash
